# Erp-system

./: .gitignore  0_testapi.py  README.md  docker-compose.yml  template.md  template.txt  testapi.py  展示层级.py
backend/: .dockerignore  .env  .env.dev  .env.example  .env.prod  Dockerfile  alembic.ini  alembic.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirement.txt  rqworker.bat
backend/alembic/: README  env.py  explain.md
backend/app/: main.py  models.py
backend/app/adapters/: explain.txt
backend/app/adapters/http/: files.py  inventory.py  login.py  masterdata.py  purchasing.py  routes.py  users.py
backend/app/app_tasks/: a_processBaoGuan.py  process.py  process_BaoGuan.py
backend/app/app_tasks/baoGuan/: a_extractInfo.py  b_gen1file.py  c_gen2file.py  d_gen3file.py  e_gen4file.py  f_gen5file.py  z_tools.py
backend/app/app_tasks/barcode/: 01_genbarcode.py
backend/app/app_tasks/resource/: baoguan.xlsx  example.xlsx  template.xlsx
backend/app/core/: config.py  explain.md  loggers.py  security.py
backend/app/domain/: explain.txt  models.py
backend/app/infrastructure/: db.py  explain.txt  init.sql  init_in_db.sql  orm_models.py  redis.py  redis_client.py  repositories_login.py  repositories_user.py  storage.py
backend/scripts/: 1-检查数据库.py  2-testAlembic.py  3-testfile.py  explain.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  http.ts  users.ts
frontend/src/layouts/: AppLayout.vue
(+8 files in other folders)
